[gd_scene load_steps=21 format=2]

[ext_resource path="res://circle.png" type="Texture" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://game.gd" type="Script" id=3]
[ext_resource path="res://bullets.gd" type="Script" id=4]
[ext_resource path="res://standard_button.tres" type="Theme" id=5]
[ext_resource path="res://black_button.tres" type="Theme" id=6]
[ext_resource path="res://NunitoSans-Black.ttf" type="DynamicFontData" id=7]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.286275, 0.286275, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.141176, 0.858824, 0.188235, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.521569, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.521569, 0.0352941, 1 )

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 5 )
Button/icons/black = null
Button/styles/disabled = SubResource( 6 )
Button/styles/focus = null
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.576471, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.823529, 0.00784314, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.823529, 0.00784314, 0.00784314, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Spawners" type="Node2D" parent="."]
pause_mode = 2

[node name="bullets" type="Node2D" parent="Spawners"]
position = Vector2( 300, 300 )
script = ExtResource( 4 )

[node name="circle" type="Sprite" parent="."]
position = Vector2( 300, 300 )
texture = ExtResource( 1 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( 300, 300 )

[node name="player" type="Sprite" parent="Player"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="start_game" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 82.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Victory" type="Control" parent="."]
visible = false
margin_right = 600.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Victory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.5
margin_top = 223.0
margin_right = 175.5
margin_bottom = 289.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.521569, 0.0352941, 1 )
text = "Level Complete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Victory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = 37.5
margin_right = 191.5
margin_bottom = 82.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Button" parent="Victory/HBoxContainer"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 0 )
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="Victory/HBoxContainer"]
margin_left = 204.0
margin_right = 383.0
margin_bottom = 45.0
rect_min_size = Vector2( 179, 0 )
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="."]
visible = false
margin_right = 600.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.5
margin_top = 223.0
margin_right = 175.5
margin_bottom = 289.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.823529, 0.00784314, 0.00784314, 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Completion" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = -27.0
margin_right = 168.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "50% Complete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = 37.5
margin_right = 191.5
margin_bottom = 82.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Button" parent="GameOver/HBoxContainer"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 0 )
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="GameOver/HBoxContainer"]
margin_left = 204.0
margin_right = 383.0
margin_bottom = 45.0
rect_min_size = Vector2( 179, 0 )
mouse_default_cursor_shape = 2
theme = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Try Again"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="start_game" to="." method="_on_start_game_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Victory/HBoxContainer/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Victory/HBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="GameOver/HBoxContainer/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="GameOver/HBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
